T Compiler/tests/phase3tests/error/duplicateField.t
class A
{
  int a;
}

class B
{
  int a;
  int b,c;
  int d,b,f;
}

int main()
{
}

